--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </ul>
 <ol id="objects">
 <li><a target="_self" href="music-track-1.html">Time Machine [10/1/2024]</a></li>
+<li><a target="_self" href="music-track-2.html">Working Man [10/6/2024]</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
